# hermes

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: post-checkout  post-merge  reindex.sh
docs/: hermes-architecture.mmd  token-savings-flow.mmd
hermes-kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
hermes-kotlin/src/main/kotlin/hermes/: Accounting.kt  Embedding.kt  Graph.kt  GraphBuilders.kt  GraphQueries.kt  HermesEngine.kt  Main.kt  McpServer.kt  Pointer.kt  Schema.kt  Temporal.kt
hermes-kotlin/src/main/kotlin/hermes/ingestion/: Chunker.kt  Crawler.kt  HashTracker.kt  IngestionPipeline.kt
hermes-kotlin/src/main/kotlin/hermes/search/: Fts.kt  Literal.kt  SearchEngine.kt  Vector.kt
hermes-kotlin/src/test/kotlin/hermes/: AccountingTest.kt  GraphQueriesTest.kt  GraphTest.kt  HermesEngineTest.kt  PointerTest.kt  SchemaTest.kt  TemporalTest.kt
hermes-kotlin/src/test/kotlin/hermes/ingestion/: ChunkerTest.kt  HashTrackerTest.kt
hermes-kotlin/src/test/kotlin/hermes/search/: FtsTest.kt  LiteralTest.kt  SearchEngineTest.kt
src/: accounting.rs  embedding.rs  graph.rs  graph_builders.rs  graph_queries.rs  lib.rs  mcp_server.rs  mcp_tools_validation.rs  pointer.rs  schema.rs  temporal.rs
src/ingestion/: chunker.rs  crawler.rs  env_scanner.rs  hash_tracker.rs  mod.rs
src/search/: fts.rs  literal.rs  mod.rs  vector.rs
